--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.3.3",
     "@types/node": "20.10.5",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
-    "tailwindcss": "3.3.6",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
     "lucide-react": "0.294.0",
-    "recharts": "2.8.0"
+    "next": "14.0.4",
+    "postcss": "8.4.32",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "recharts": "2.8.0",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
